--- a/index.html
+++ b/index.html
@@ -65,20 +65,20 @@
                         <div>很高兴再次赞助清华TEEC长三角高尔夫年度盛会。祝尾牙赛圆满成功，球队蒸蒸日上！</div>
                     </div>
                 </div>
-                <div style="margin-top:2.2rem;height: 240px;">
+                <div style="margin-top:2.2rem;height: 180px;">
                     <div style="float:left;margin-left: 7%;width:60%;padding-right: 10px;color: #83360a;font-size:1rem;line-height: 60px;">
                             非常感谢杨军师弟对高会长和球队的的支持！并祝贺王茅高质量快速发展！
                     </div>
-                    <div style="float:left;width:30%;height:240px;">
+                    <div style="float:left;width:30%;">
                         <img src="wang.jpg" style="margin-left: 10px;width:70%;border-radius: 50%;" >
                     </div>
                 </div>
             </div>
         </div>
-        <div style="width:100%;text-align:center;color:#83360a;font-size:0.8rem;margin-top:1rem">
+        <div style="width:100%;text-align:center;color:#83360a;font-size:0.8rem;margin-top:0.5rem">
                 扫码入群，领取精美礼品
         </div>
-        <div style="width:100%;text-align:center;margin-top:0.5rem;">
+        <div style="width:100%;text-align:center;">
             <img style="width:60%;" src="20181128124523.jpg" alt="">
         </div>
         <div class="content">
