--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                     <div style="float:left;width:60%;margin-left: 15px;color: #83360a;font-size:1rem;line-height: 60px;">
                         杨军，王茅董事长：
-                        <div>很高兴再次赞助清华TEEC长三角高尔夫年度盛会。祝尾牙赛圆满成功，球队蒸蒸日上！</div>
+                        <div>很高兴赞助清华TEEC长三角高尔夫年度盛会。祝尾牙赛圆满成功，球队蒸蒸日上！</div>
                     </div>
                 </div>
                 <div style="margin-top:2.2rem;height: 180px;">
